<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/destination_button"
                android:layout_marginBottom="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_destination_text"
                android:textSize="15sp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/longitute_layout"
                android:hint="@string/longitude_hint_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                app:hintEnabled="true"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/destination_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/longitute_et"
                    android:maxLines="1"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/latitute_layout"
                android:hint="@string/latitude_hint_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/longitute_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/latitute_et"
                    android:maxLines="1"
                    android:inputType="numberDecimal|numberSigned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_weight="1"
            android:paddingLeft="18dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/user_location_icon"
                        android:src="@drawable/ic_gps_white"
                        android:layout_alignParentLeft="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_toRightOf="@id/user_location_icon"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingLeft="9dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/user_location_text"
                            android:text="Your Location"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/user_latitude"
                            android:layout_marginTop="3dp"
                            android:text="Lat: "
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/user_longitude"
                            android:layout_marginTop="3dp"
                            android:text="Lng: "
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15dp">

                    <ImageView
                        android:id="@+id/user_destination_icon"
                        android:src="@drawable/ic_location_white"
                        android:layout_alignParentLeft="true"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_toRightOf="@id/user_destination_icon"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:paddingLeft="9dp"
                        android:paddingBottom="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/user_destination_text"
                            android:text="@string/destination_location_text"
                            android:textSize="16sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/destination_latitude"
                            android:layout_marginTop="3dp"
                            android:text="@string/lat_text"
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/destination_longitude"
                            android:layout_marginTop="3dp"
                            android:text="@string/lng_text"
                            android:textSize="15sp"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>

    <com.example.samplecompasstracker.view.CompassView
        android:id="@+id/compass_view"
        android:layout_above="@id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>